# zzz-guides

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  schema.json  sitemap.xml
.github/workflows/: build_docs.yml  bump_version.yml  generate_disc_images.yml  generate_parsed.yml  generate_schema.yml  generate_ts_types.yml  publish_npm.yml  validate_original.yml
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  README.md  form-generator.html  schema.md
docs/sdks/python/: index.md  reference.md
docs/sdks/typescript/: index.md
guides/original/: astra.yml  harumasa.yml  miyabi.yml  ye-shunguang.yml  yixuan.yml  zhao.yml
guides/parsed/: astra.json  harumasa.json  miyabi.json  ye-shunguang.json  yixuan.json  zhao.json
schema/: index.html
scripts/: generate_disc_images.py  generate_parsed.py  generate_schema.py  generate_ts_types.js  parse.py  validate_original.py
sdks/python/: index.html
sdks/python/reference/: index.html
sdks/typescript/: index.html
search/: search_index.json
szgf/: __init__.py  client.py  parser.py  schema.py  validator.py
szgf-ts/: .npmignore  example.ts  package-lock.json  package.json  tsconfig.json
szgf-ts/src/: client.ts  index.ts  types.ts
szgf/schemas/: __init__.py  original.py  parsed.py
