[project]
name = "zzz-guides"
version = "0.1.0"
description = "ZZZ agent guides & definition of Standardized ZZZ Guide Format (SZGF)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
validate = ["jsonschema>=4.24.0"]
parse = ["requests>=2.32.4"]


[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
