[project]
name = "szgf"
version = "0.1.5"
description = "ZZZ agent guides & definition of Standardized ZZZ Guide Format (SZGF)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "hakushin-py>=0.4.11",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[dependency-groups]
validate = ["jsonschema>=4.24.0"]
parse = ["requests>=2.32.4"]
draw = ["anyio>=4.12.0", "httpx>=0.28.1", "pillow>=12.0.0"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""
